fixed header alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,15 @@ li {
   list-style-type: none;
 }
 
+h1 {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+p {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
 
 .page-container {
   min-height: 100vh;
@@ -54,16 +63,17 @@ li {
   text-align: center;
   /* Troubleshooting */
   /* background-color: green; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .footer {
   text-align: center;
+  font-size: small;
   /* color: grey; */
   
   /* Troubleshooting */
   /* background-color: red; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .navbar-area {
@@ -71,7 +81,7 @@ li {
 
   /* Troubleshooting */
   /* background-color: lightblue; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .main-area {
@@ -79,5 +89,5 @@ li {
 
   /* Troubleshooting */
   /* background-color: blue; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
